[package]
name = "day24"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
slab_tree = "0.3.2"
strum = { workspace = true }
strum_macros = { workspace = true }
num = "0.4.2"
grid = { workspace = true }